# What-is-a-Dinosaur-s-Favorite-Form-of-Compression-Lab

./: CMakeLists.txt  main.cpp
src/: huffman.cpp  huffman.hpp
tests/: huffman_test.cpp
